--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-<<<<<<< HEAD
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-=======
 config_real.ini
 py_venv/
 
@@ -173,4 +167,31 @@ cython_debug/
 
 # php
 vendor
->>>>>>> 8129dc4f6162eefed931e39581894308a03bff35
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+node_modules/
+
+# next.js
+.next/
+out/
+
+# production
+build
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
